--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Config\EquipmentType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\BehavoirTree\BTScript\ParallelBTScript.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector3\Vector3Extension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Easing\EasingManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameObjectPool\GameObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDotBind.cs" />
     <Compile Include="Assets\Hotfix\Init\Init.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Assets\Hotfix\Core\Base\MultiDictionary.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Property\ComProperty.cs" />
     <Compile Include="Assets\Hotfix\Logic\Utility\IconUtility.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Easing\EasingExtensions.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Scene\SceneManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\System\SysCameraBlender.cs" />
@@ -206,6 +208,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarMapManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaContext.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Random\RandomUtility.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Easing\EasingType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameObjectPool\GameObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\UIRoot\UIRootLogin.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBLanguage.cs" />
@@ -229,6 +232,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarNodeData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\ECSWorld.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\Death\DeathProcess.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Easing\EasingFunctions.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\BehavoirTree\KVContext\KVContext.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBReward.cs" />
