--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -50,9 +50,11 @@
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\SceneManager.cs" />
     <Compile Include="Assets\Hotfix\Config\StackType.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventPool\BaseEventArgs.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComUniInGamePlayers.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComUniCameraBlender\ComUniCameraBlender.cs" />
     <Compile Include="Assets\Hotfix\Config\Equipment.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\RedDot\Interface\IRedDotService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\ObjectPoolManager.Object.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Bag\ModBag.cs" />
     <Compile Include="Assets\Hotfix\Battle\System\SysSkillProcess.cs" />
@@ -64,11 +66,14 @@
     <Compile Include="Assets\Hotfix\GameLogic\UI\UIRoot\UIRootCommon.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComTimer.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\FSM\StateNode.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Timer\Interface\ITimerService.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Skill\SkillAbility.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\IObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\RedDot\RedDotBind.cs" />
     <Compile Include="Assets\Hotfix\Battle\BTScript\Skill\SkillBTScript.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Video\VideoManager.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Input\Interface\IInputService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\CodeTypes\Interface\ICodeTypesService.cs" />
     <Compile Include="Assets\Hotfix\Config\EquipmentType.cs" />
     <Compile Include="Assets\Hotfix\Config\Tables.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysViewTransform.cs" />
@@ -82,31 +87,40 @@
     <Compile Include="Assets\Hotfix\Utility\ScrollerPro\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScriptManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\SetParentDecorator.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Platform\Interface\IPlatformService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.FunctionTurn.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysDebug.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Main\Interface\IMainService.cs" />
     <Compile Include="Assets\Hotfix\ECS\MetaContext\MetaMatcher.cs" />
     <Compile Include="Assets\Hotfix\Config\TBRewardTemplate.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Event\GameEventType.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\EventPool\EventPoolMode.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Vibration\Interface\IVibrationService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Video\Interface\IVideoService.cs" />
     <Compile Include="Assets\Hotfix\ECS\Utility\TargetUtility.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Node\WEnum.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\MultiDictionary.cs" />
     <Compile Include="Assets\Hotfix\Utility\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\IScheduler.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\DataStruct\TypeNamePair.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\EventPool\BaseEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\Data\CalcDamageInfo.cs" />
     <Compile Include="Assets\Hotfix\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\SceneAttribute.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Coroutine\Interface\ICoroutineService.cs" />
     <Compile Include="Assets\Hotfix\Battle\System\SysBuffs.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComTag.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\Interface\IFiberService.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Skill\SkillData.cs" />
     <Compile Include="Assets\Hotfix\Utility\Awaiter\Action\ActionWrap.cs" />
     <Compile Include="Assets\Hotfix\Battle\BattleState.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Scene\Interface\ISceneService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\Log\LogLevel.cs" />
     <Compile Include="Assets\Hotfix\Utility\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComTransform.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Core\Service\IService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Save\Interface\ISaveService.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComFaction.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\GameEventArgs.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\HotfixBridge\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Config\TBSkill.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Download\DownloadManager.cs" />
     <Compile Include="Assets\Hotfix\Config\TBSubobject.cs" />
@@ -137,13 +151,15 @@
     <Compile Include="Assets\Hotfix\Config\TBPopupWindow.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\Death\DeathProcess.cs" />
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicContext.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Manager\CodeTypes\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.Types.cs" />
     <Compile Include="Assets\Hotfix\ECS\MetaContext\MetaComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Utility\Extension\UnityWebRequest\UnityWebRequestExtension.cs" />
     <Compile Include="Assets\Hotfix\Config\Texture.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\DamageBase.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Global\Interface\IGlobalService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\FX\Interface\IFXService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Model\Interface\IModelService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Model\ModelAttribute.cs" />
     <Compile Include="Assets\Hotfix\Utility\Resolution\ResolutionUtility.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComHP.cs" />
@@ -151,6 +167,7 @@
     <Compile Include="Assets\Hotfix\Framework\Core\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\Data\DamageSource.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Event\GameEventArgs.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\HotfixBridge\Interface\IHotfixBridgeService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\LoadSceneHandler.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\GameObjectPoolDecorator.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Window\Window.cs" />
@@ -164,6 +181,8 @@
     <Compile Include="Assets\Hotfix\Utility\Random\RandomUtility.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScriptAttribute.cs" />
     <Compile Include="Assets\Hotfix\Utility\ScrollerPro\LoopScrollPool.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Easing\Interface\IEasingService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\Interface\IEventService.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\KVContext\KVContext.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Setting\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Utility\Assembly\AssemblyUtility.cs" />
@@ -177,15 +196,15 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\FX\FXManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\GameObjectPoolObject.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysFSM.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventPool\EventPool.Event.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Core\Base\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Vibration\VibrationManager.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\EventPool\EventPool.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\UI\UIRoot\UIRootLogin.cs" />
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Skill\SkillCD.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Download\DownloadFile.cs" />
-    <Compile Include="Assets\Hotfix\Utility\HotfixBridge\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\ReleaseObjectFilterCallback.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComView\ComView.cs" />
     <Compile Include="Assets\Hotfix\Utility\MVVM\View\View\IView.cs" />
@@ -197,7 +216,10 @@
     <Compile Include="Assets\Hotfix\ECS\ECSWorld.cs" />
     <Compile Include="Assets\Hotfix\Utility\ScreenAdaptation\ScreenAdaptationUtility.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\AStarMap\AStarMapManager.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Main\MainPartial.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComLife.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\UI\Interface\IWindowService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Config\Interface\IConfigService.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComOwnerEntity.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\Fiber.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Easing\EasingExtensions.cs" />
@@ -208,7 +230,6 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Download\DownloadData.cs" />
     <Compile Include="Assets\Hotfix\Config\Language.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComOwnerPlayer.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\EventPool\EventPool.Event.cs" />
     <Compile Include="Assets\Hotfix\Utility\ClientTools\ClientTools.cs" />
     <Compile Include="Assets\Hotfix\Config\ItemType.cs" />
     <Compile Include="Assets\Hotfix\Utility\Awaiter\AssetBundleRequestAwaiter.cs" />
@@ -216,6 +237,7 @@
     <Compile Include="Assets\Hotfix\Battle\Component\SkillProcess\SkillProcess.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\Utility\Extension\BTAgentExtension.cs" />
     <Compile Include="Assets\Hotfix\Utility\Extension\Vector3\Vector3Extension.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Interface\IGameObjectPoolService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComControl\ComControl.cs" />
     <Compile Include="Assets\Hotfix\Config\ValuePropertyType.cs" />
@@ -226,6 +248,7 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\GameObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Config\ItemSmallType.cs" />
     <Compile Include="Assets\Hotfix\Utility\AutoReference\AutoReferenceUtility.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Download\Interface\IDownloadService.cs" />
     <Compile Include="Assets\Hotfix\Utility\Extension\Transform\TransformExtension.cs" />
     <Compile Include="Assets\Hotfix\Utility\Awaiter\AsyncOperationAwaiter.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Bag\ItemData.cs" />
@@ -244,6 +267,7 @@
     <Compile Include="Assets\Hotfix\Framework\Core\Base\Entry.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComConfig.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Setting\ModSetting.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Command\Interface\ICommandService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Icon\IconBase.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysLocomotion.cs" />
     <Compile Include="Assets\Hotfix\Utility\ScrollerPro\LoopScrollItem.cs" />
@@ -263,7 +287,10 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Platform\Dev\DevCallbackMessage.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\UI\UIMain\UIMainPanel.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\FSM\ComFSM.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Camera\Interface\ICameraService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\FunctionOpen\Interface\IFunctionOpenService.cs" />
     <Compile Include="Assets\Hotfix\Battle\System\SysSubobject.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Main\Main.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Platform\BaseCallbackMessage.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\Collider\ColliderHandler.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysCameraBlender.cs" />
@@ -272,6 +299,7 @@
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\IObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\SceneType.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComHero.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventPool\EventPoolMode.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\Data\DamageType.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Vibration\SimpleVibrationHandler.cs" />
     <Compile Include="Assets\Hotfix\Config\TBBuffValue.cs" />
@@ -279,8 +307,10 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Node\IUILogic.cs" />
     <Compile Include="Assets\Hotfix\ECS\Base\EntityIndexEnum.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Main\Module.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\ReferencePool\ReferencePool.cs" />
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicEntity.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\AStarMap\Interface\IAStarMapService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\RootNode\BlackboardType.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\UI\UIRoot\UIRootMain.cs" />
@@ -290,11 +320,14 @@
     <Compile Include="Assets\Hotfix\GameLogic\Module\Setting\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Character\ModCharacter.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\Log\Log.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Language\Interface\ILanguageService.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComMonster.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Collider\SubobjectColliderHandlerBase.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\ThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventPool\EventPool.cs" />
     <Compile Include="Assets\Hotfix\Config\CollisionType.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Main\DefaultMain.cs" />
     <Compile Include="Assets\Hotfix\ECS\MetaContext\MetaComponent.cs" />
     <Compile Include="Assets\Hotfix\ECS\MetaContext\MetaContext.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Easing\EasingFunctions.cs" />
@@ -309,10 +342,11 @@
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicMatcher.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\RootNode\WRootNode.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Scene\MainScene.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Buff\ComBuffs.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Command\CommandType.cs" />
-    <Compile Include="Assets\Hotfix\Utility\Marshal\MarshalUtility.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\RedDot\RedDotManager.cs" />
+    <Compile Include="Assets\Hotfix\Utility\Marshal\MarshalUtility.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\FSM\FSM.cs" />
     <Compile Include="Assets\Hotfix\Config\Buff.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Utility\GameUtility.cs" />
@@ -321,6 +355,7 @@
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScript.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComView\ActorView.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Orca\Interface\IOrcaService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Input\InputManager.cs" />
     <Compile Include="Assets\Hotfix\Config\RewardTemplate.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Property\ComProperty.cs" />
@@ -335,6 +370,7 @@
     <Compile Include="Assets\Hotfix\Battle\Component\Buff\BuffState.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysLife.cs" />
     <Compile Include="Assets\Hotfix\Config\TBPanel.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Audio\Interface\IAudioService.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Event\GameEvent.cs" />
     <Compile Include="Assets\Hotfix\ECS\Utility\WorldUtility.cs" />
     <Compile Include="Assets\Hotfix\Battle\BattleWorld.cs" />
@@ -345,6 +381,7 @@
     <Compile Include="Assets\Hotfix\Config\TBIcon.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\MainThreadScheduler.cs" />
     <Compile Include="Assets\Hotfix\Utility\Network\NetworkUtility.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\Icon\Interface\IIconService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Icon\UIRewardNormal.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\PreloadDecorator.cs" />
