--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -78,20 +78,19 @@
     <Compile Include="Assets\Hotfix\Config\Tables.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysViewTransform.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\ThreadPoolScheduler.cs" />
-    <Compile Include="Assets\Hotfix\ECS\WorldManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\LinkedListRange.cs" />
     <Compile Include="Assets\Hotfix\ECS\LogicSystems.cs" />
     <Compile Include="Assets\Hotfix\Config\Icon.cs" />
     <Compile Include="Assets\Hotfix\Utility\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
     <Compile Include="Assets\Hotfix\ECS\Base\GroupEntityIndex.cs" />
     <Compile Include="Assets\Hotfix\Utility\ScrollerPro\LoopScroll.cs" />
-    <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScriptManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\SetParentDecorator.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Platform\Interface\IPlatformService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.FunctionTurn.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysDebug.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Main\Interface\IMainService.cs" />
     <Compile Include="Assets\Hotfix\ECS\MetaContext\MetaMatcher.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\World\WorldManager.cs" />
     <Compile Include="Assets\Hotfix\Config\TBRewardTemplate.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Event\GameEventType.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Vibration\Interface\IVibrationService.cs" />
@@ -147,7 +146,6 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\AutoReleaseDecorator.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysGameMode.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.Res.cs" />
-    <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\ParallelBTScript.cs" />
     <Compile Include="Assets\Hotfix\Config\TBPopupWindow.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\Death\DeathProcess.cs" />
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicContext.cs" />
@@ -160,13 +158,13 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\FX\Interface\IFXService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Manager\WindowManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Model\Interface\IModelService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\Interface\IBTScriptService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Model\ModelAttribute.cs" />
     <Compile Include="Assets\Hotfix\Utility\Resolution\ResolutionUtility.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComHP.cs" />
     <Compile Include="Assets\Hotfix\Config\MultiLanguageTexture.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\Data\DamageSource.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Event\GameEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\HotfixBridge\Interface\IHotfixBridgeService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\LoadSceneHandler.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\GameObjectPoolDecorator.cs" />
@@ -179,7 +177,7 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Model\ModelTemplate.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComID.cs" />
     <Compile Include="Assets\Hotfix\Utility\Random\RandomUtility.cs" />
-    <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScriptAttribute.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\BTScript.cs" />
     <Compile Include="Assets\Hotfix\Utility\ScrollerPro\LoopScrollPool.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Easing\Interface\IEasingService.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Event\Interface\IEventService.cs" />
@@ -228,6 +226,7 @@
     <Compile Include="Assets\Hotfix\ECS\LogicContext\LogicComponent.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComUniCameraBlender\ICameraBlender.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Download\DownloadData.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\World\Interface\IWorldService.cs" />
     <Compile Include="Assets\Hotfix\Config\Language.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComOwnerPlayer.cs" />
     <Compile Include="Assets\Hotfix\Utility\ClientTools\ClientTools.cs" />
@@ -264,7 +263,6 @@
     <Compile Include="Assets\Hotfix\GameLogic\Module\Player\ModPlayer.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\ComUniDamage\Data\DamageProp.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\Entry.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComConfig.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Setting\ModSetting.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Command\Interface\ICommandService.cs" />
@@ -276,7 +274,6 @@
     <Compile Include="Assets\Hotfix\Utility\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Platform\BasePlatform.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\KVContext\KVType.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Event\IEventManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Coroutine\CoroutineManager.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComUnityObjectRelated.cs" />
     <Compile Include="Assets\Hotfix\Config\Skill.cs" />
@@ -295,7 +292,6 @@
     <Compile Include="Assets\Hotfix\ECS\Component\Collider\ColliderHandler.cs" />
     <Compile Include="Assets\Hotfix\ECS\System\SysCameraBlender.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Module\Equipment\ModEquipment.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Base\Module.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\IObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Scene\SceneType.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComHero.cs" />
@@ -321,6 +317,7 @@
     <Compile Include="Assets\Hotfix\GameLogic\Module\Character\ModCharacter.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\Log\Log.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Language\Interface\ILanguageService.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\ParallelBTScript.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComMonster.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Collider\SubobjectColliderHandlerBase.cs" />
@@ -352,7 +349,6 @@
     <Compile Include="Assets\Hotfix\GameLogic\Utility\GameUtility.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Skill\SkillSpellType.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\ThreadScheduler.cs" />
-    <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTScript.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\ECS\Component\ComView\ActorView.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Orca\Interface\IOrcaService.cs" />
@@ -364,6 +360,7 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Save\SaveManager.cs" />
     <Compile Include="Assets\Hotfix\Battle\Component\Buff\BuffProperty.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Extension\WNodeExtension.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\BTScriptManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\UILogic\UIDefine.cs" />
     <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTAgent\BTAgent.cs" />
     <Compile Include="Assets\Hotfix\Config\TBItem.cs" />
@@ -382,16 +379,16 @@
     <Compile Include="Assets\Hotfix\Framework\Manager\Fiber\MainThreadScheduler.cs" />
     <Compile Include="Assets\Hotfix\Utility\Network\NetworkUtility.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Icon\Interface\IIconService.cs" />
-    <Compile Include="Assets\Hotfix\Framework\Core\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Icon\UIRewardNormal.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\GameObjectPool\Decorators\PreloadDecorator.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\ObjectPool\ObjectInfo.cs" />
-    <Compile Include="Assets\Hotfix\ECS\BehavoirTree\BTScript\BTAction.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\BTScriptAttribute.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\Node\WNode.cs" />
     <Compile Include="Assets\Hotfix\Config\PopupWindow.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Easing\EasingManager.cs" />
     <Compile Include="Assets\Hotfix\GameLogic\Scene\LoginScene.cs" />
+    <Compile Include="Assets\Hotfix\Framework\Manager\BTScript\BTAction.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\UI\UILogic\UIRootBase.cs" />
     <Compile Include="Assets\Hotfix\Framework\Manager\Coroutine\CoroutineCompletedHandler.cs" />
     <Compile Include="Assets\Hotfix\Framework\Core\Base\ReferencePool\IReference.cs" />
